# setup

./: .gitattributes  .gitignore  README.md  ainstall.md  architecture-design.md  code-quality.md  coder.agent.md  gpt.promot.guidance.md  professional-conduct.md  requirements-gathering.md  zig-ghostty-builder.sh
.github/workflows/: verify.yml
archive/: CLAUDE.md  architecture-design.md  code-quality.md  development-process.md  gpt.promot.guidance.md  professional-conduct.md  security-design.md  testing-quality.md
macos-dev/: .gitignore  Brewfile  README.md  install-macos.sh  install-wsl.sh  tools.txt
macos-dev/aerospace/: aerospace.toml
macos-dev/agents/: AGENTS.md.snippet
macos-dev/atuin/: config.toml
macos-dev/bash/: .bash_aliases  .bash_profile  .bashrc  .inputrc
macos-dev/btop/: btop.conf  dracula-pro.theme
macos-dev/container/: .dockerignore  Containerfile  dev.env.example  dev.sh  io.podman.machine.plist  podman-machine-start.sh  test-dev-shell.sh  test-tool-installs.sh
macos-dev/diffnav/: config.yml
macos-dev/dircolors/: .dir_colors
macos-dev/docs/: cheatsheet.md  jit-admin-request.md
macos-dev/environment.d/: wsl-gui.conf
macos-dev/freeze/: dracula-pro.xml
macos-dev/gh-dash/: config.yml
macos-dev/ghostty/: config
macos-dev/git/: .gitconfig  .gitignore_global
macos-dev/glow/: dracula-pro.json
macos-dev/jqp/: .jqp.yaml
macos-dev/pygments/: dracula_pro.py  pyproject.toml
ultralight-orchestration/: ATTRIBUTION.md  ainstall.md  coder.agent.md  designer.agent.md  mini-orchestrator.agent.md  orchestrator.agent.md  planner.agent.md
(+208 files in other folders)
