[project]
name = "pygments-dracula-pro-local"
version = "0.1.0"
description = "Local Dracula Pro pygments style — bundled in this dotfiles repo"
requires-python = ">=3.9"
dependencies = ["pygments>=2.15"]

[project.entry-points."pygments.styles"]
"dracula-pro" = "dracula_pro:DraculaProStyle"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["dracula_pro.py"]
